--- a/app.yaml
+++ b/app.yaml
@@ -12,11 +12,14 @@ handlers:
 - url: /js
   static_dir: js
 
-- url: /GeoSearch/css
-  static_dir: GeoSearch/css
+- url: /css
+  static_dir: css
 
 - url: /GeoSearch/js
   static_dir: GeoSearch/js
+
+- url: /GeoSearch/css
+  static_dir: GeoSearch/css
 
 - url: .*
   script: main.app
