--- a/app.yaml
+++ b/app.yaml
@@ -21,6 +21,9 @@ handlers:
 - url: /GeoSearch/css
   static_dir: GeoSearch/css
 
+- url: /leaflet-sidebar
+  static_dir: leaflet-sidebar
+
 - url: /leaflet-search
   static_dir: leaflet-search
 
